@@ -22,10 +22,6 @@
 extern "C" {
 #endif
 
-#include <errno.h>
-#include "magick/exception-private.h"
-#include "magick/policy.h"
-
 typedef struct _CoderInfo
 {
   char
@@ -58,20 +54,6 @@ extern MagickExport MagickBooleanType
 
 MagickExport void
   CoderComponentTerminus(void);
-
-static inline MagickBooleanType IsCoderAuthorized(const char *module,
-  const char *coder,const PolicyRights rights,ExceptionInfo *exception)
-{
-  if ((IsRightsAuthorized(ModulePolicyDomain,rights,module) == MagickFalse) ||
-      (IsRightsAuthorized(CoderPolicyDomain,rights,coder) == MagickFalse))
-    {
-      errno=EPERM;
-      (void) ThrowMagickException(exception,GetMagickModule(),PolicyError,
-        "NotAuthorized","`%s:%s'",module,coder);
-      return(MagickFalse);
-    }
-  return(MagickTrue);
-}
 
 #if defined(__cplusplus) || defined(c_plusplus)
 }
